@@ -15,6 +15,7 @@ exempt of errors.
 - Eric Tanguy
 - Erwan Velu
 - Fredrik Svensson
+- Glen Masgai
 - Jiri Zouhar
 - John Dennis
 - Jonathan (no_dice)
@@ -28,4 +29,5 @@ exempt of errors.
 - Michael (Oxy)
 - Paul Vixie
 - Siva Chandran
+- Timothy Redaelli
 
